GPv3: SVG export corrupted #126606
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#126606
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 552.12
Blender Version
Broken: version: 4.3.0 Alpha, branch: main (modified), commit date: 2024-08-21 13:20, hash:
08d5eb8f9cba
Worked: 4.2
Short description of error
When you export a demo file, the result is totally wrong.
Exact steps for others to reproduce the error
@LukasTonne ^ :)
The SVG export is looking good for this file with the fix above.
PDF export, however, looks bad because of the materials used here: A number of materials have both Stroke and Fill color, but with Fill alpha set to zero. That makes these strokes invisible in the viewport and in SVG they also render transparent. PDF does not support transparency, so all these strokes show up with weird extra triangles. This is not really a bug but a limitation of the GP renderer and the PDF format:
There is something I am missing. If the GPv3 Render Engine is the same and the materials are the same as in GPv2 and in GPv2 the exporter is able to do it, why can't it be done in GPv3? The PDF exporter is very important for transferring animation to other software and for creating scene documentation.
What is GP supposed to do with a material that it cannot render properly in pdf?
Why you can't? This is my question. The same file exported in GPv2 using Blender 4.2,1.
Here you have how set transparency. You need create a HPDF_ExtGState
@antoniov thanks for the hint, it was in fact setting the opacity, but ignoring the color alpha. PDF export should be ok now.
@LukasTonne Checked! The export is correct now. Thanks for fixing!
I have found a different bug with the selected frames and open a new report: #126702