Fix #126606: GPv3: Wrong projection and various other issues with exporters

Fixes the camera and View3D projection used for calculating the rendered
region for SVG/PDF export. Also drastically simplifies this code by
removing unnecessary variables and using an optional transform to
indicate when camera data is actual available.

Also fixes missing layers in export due to incorrect early exit in the
layer loop.

Pull Request: https://projects.blender.org/blender/blender/pulls/126691