source/blender/io/grease_pencil/intern/grease_pencil_io_export_pdf.cc
@@ -80,7 +80,7 @@ bool PDFExporter::export_scene(Scene &scene, StringRefNull filepath)
     case ExportParams::FrameMode::Active: {
       const int frame_number = scene.r.cfra;
 
-      this->prepare_camera_params(scene, frame_number, true);
+      this->prepare_render_params(scene, frame_number);
       this->add_page();
       this->export_grease_pencil_objects(frame_number);
       result = this->write_to_file(filepath);
@@ -99,7 +99,7 @@ bool PDFExporter::export_scene(Scene &scene, StringRefNull filepath)
           scene.r.cfra = frame_number;
           BKE_scene_graph_update_for_newframe(context_.depsgraph);
 
-          this->prepare_camera_params(scene, frame_number, true);
+          this->prepare_render_params(scene, frame_number);
           this->add_page();
           this->export_grease_pencil_objects(frame_number);
         }
@@ -135,11 +135,11 @@ void PDFExporter::export_grease_pencil_objects(const int frame_number)
 
     for (const bke::greasepencil::Layer *layer : grease_pencil_eval->layers()) {
       if (!layer->is_visible()) {
-        return;
+        continue;
       }
       const Drawing *drawing = grease_pencil_eval->get_drawing_at(*layer, frame_number);
       if (drawing == nullptr) {
-        return;
+        continue;
       }
 
       export_grease_pencil_layer(*ob_eval, *layer, *drawing);
@@ -154,8 +154,6 @@ void PDFExporter::export_grease_pencil_layer(const Object &object,
   using bke::greasepencil::Drawing;
 
   const float4x4 layer_to_world = layer.to_world_space(object);
-  const float4x4 viewmat = float4x4(context_.rv3d->viewmat);
-  const float4x4 layer_to_view = viewmat * layer_to_world;
 
   auto write_stroke = [&](const Span<float3> positions,
                           const bool cyclic,
@@ -164,7 +162,7 @@ void PDFExporter::export_grease_pencil_layer(const Object &object,
                           const std::optional<float> width,
                           const bool /*round_cap*/,
                           const bool /*is_outline*/) {
-    write_stroke_to_polyline(layer_to_view, positions, cyclic, color, opacity, width);
+    write_stroke_to_polyline(layer_to_world, positions, cyclic, color, opacity, width);
   };
 
   foreach_stroke_in_layer(object, layer, drawing, write_stroke);
@@ -192,8 +190,8 @@ bool PDFExporter::add_page()
     return false;
   }
 
-  HPDF_Page_SetWidth(page_, render_size_.x);
-  HPDF_Page_SetHeight(page_, render_size_.y);
+  HPDF_Page_SetWidth(page_, render_rect_.size().x);
+  HPDF_Page_SetHeight(page_, render_rect_.size().y);
 
   return true;
 }
@@ -221,14 +219,14 @@ void PDFExporter::write_stroke_to_polyline(const float4x4 &transform,
     HPDF_Page_SetRGBFill(page_, srgb.r, srgb.g, srgb.b);
     HPDF_Page_SetRGBStroke(page_, srgb.r, srgb.g, srgb.b);
     if (gstate) {
-      HPDF_ExtGState_SetAlphaFill(gstate, std::clamp(opacity, 0.0f, 1.0f));
-      HPDF_ExtGState_SetAlphaStroke(gstate, std::clamp(opacity, 0.0f, 1.0f));
+      HPDF_ExtGState_SetAlphaFill(gstate, std::clamp(total_opacity, 0.0f, 1.0f));
+      HPDF_ExtGState_SetAlphaStroke(gstate, std::clamp(total_opacity, 0.0f, 1.0f));
     }
   }
   else {
     HPDF_Page_SetRGBFill(page_, srgb.r, srgb.g, srgb.b);
     if (gstate) {
-      HPDF_ExtGState_SetAlphaFill(gstate, std::clamp(opacity, 0.0f, 1.0f));
+      HPDF_ExtGState_SetAlphaFill(gstate, std::clamp(total_opacity, 0.0f, 1.0f));
     }
   }
   if (gstate) {
