source/blender/io/grease_pencil/intern/grease_pencil_io_export_svg.cc
@@ -139,7 +139,7 @@ bool SVGExporter::export_scene(Scene &scene, StringRefNull filepath)
 {
   const int frame_number = scene.r.cfra;
 
-  this->prepare_camera_params(scene, frame_number, false);
+  this->prepare_render_params(scene, frame_number);
 
   this->write_document_header();
   pugi::xml_node main_node = this->write_main_node();
@@ -152,7 +152,7 @@ void SVGExporter::export_grease_pencil_objects(pugi::xml_node node, const int fr
 {
   using bke::greasepencil::Drawing;
 
-  const bool is_clipping = is_camera_ && params_.use_clip_camera;
+  const bool is_clipping = camera_persmat_ && params_.use_clip_camera;
 
   Vector<ObjectInfo> objects = retrieve_objects();
 
@@ -165,7 +165,7 @@ void SVGExporter::export_grease_pencil_objects(pugi::xml_node node, const int fr
       clip_node.append_attribute("id").set_value(
           ("clip-path" + std::to_string(frame_number)).c_str());
 
-      write_rect(clip_node, 0, 0, render_size_.x, render_size_.y, 0.0f, "#000000");
+      write_rect(clip_node, 0, 0, render_rect_.size().x, render_rect_.size().y, 0.0f, "#000000");
     }
 
     pugi::xml_node frame_node = node.append_child("g");
@@ -191,11 +191,11 @@ void SVGExporter::export_grease_pencil_objects(pugi::xml_node node, const int fr
 
     for (const bke::greasepencil::Layer *layer : grease_pencil_eval->layers()) {
       if (!layer->is_visible()) {
-        return;
+        continue;
       }
       const Drawing *drawing = grease_pencil_eval->get_drawing_at(*layer, frame_number);
       if (drawing == nullptr) {
-        return;
+        continue;
       }
 
       /* Layer node. */
@@ -218,10 +218,6 @@ void SVGExporter::export_grease_pencil_layer(pugi::xml_node layer_node,
   using bke::greasepencil::Drawing;
 
   const float4x4 layer_to_world = layer.to_world_space(object);
-  const float4x4 viewmat = float4x4(context_.rv3d->viewmat);
-  /* SVG has inverted Y axis. */
-  const float4x4 svg_coords = math::from_scale<float4x4>(float3(1, -1, 1));
-  const float4x4 layer_to_view = svg_coords * viewmat * layer_to_world;
 
   auto write_stroke = [&](const Span<float3> positions,
                           const bool cyclic,
@@ -231,14 +227,14 @@ void SVGExporter::export_grease_pencil_layer(pugi::xml_node layer_node,
                           const bool round_cap,
                           const bool is_outline) {
     if (is_outline) {
-      pugi::xml_node element_node = write_path(layer_node, layer_to_view, positions, cyclic);
+      pugi::xml_node element_node = write_path(layer_node, layer_to_world, positions, cyclic);
       write_fill_color_attribute(element_node, color, opacity);
     }
     else {
       /* Fill is always exported as polygon because the stroke of the fill is done
        * in a different SVG command. */
       pugi::xml_node element_node = write_polyline(
-          layer_node, layer_to_view, positions, cyclic, width);
+          layer_node, layer_to_world, positions, cyclic, width);
 
       if (width) {
         write_stroke_color_attribute(element_node, color, opacity, round_cap);
@@ -278,8 +274,8 @@ pugi::xml_node SVGExporter::write_main_node()
   main_node.append_attribute("y").set_value("0px");
   main_node.append_attribute("xmlns").set_value("http://www.w3.org/2000/svg");
 
-  std::string width = std::to_string(render_size_.x);
-  std::string height = std::to_string(render_size_.y);
+  std::string width = std::to_string(render_rect_.size().x);
+  std::string height = std::to_string(render_rect_.size().y);
 
   main_node.append_attribute("width").set_value((width + "px").c_str());
   main_node.append_attribute("height").set_value((height + "px").c_str());
@@ -300,8 +296,10 @@ pugi::xml_node SVGExporter::write_polygon(pugi::xml_node node,
     if (i > 0) {
       txt.append(" ");
     }
+    /* SVG has inverted Y axis. */
     const float2 screen_co = this->project_to_screen(transform, positions[i]);
-    txt.append(std::to_string(screen_co.x) + "," + std::to_string(screen_co.y));
+    txt.append(std::to_string(screen_co.x) + "," +
+               std::to_string(render_rect_.size().y - screen_co.y));
   }
 
   element_node.append_attribute("points").set_value(txt.c_str());
@@ -326,8 +324,10 @@ pugi::xml_node SVGExporter::write_polyline(pugi::xml_node node,
     if (i > 0) {
       txt.append(" ");
     }
+    /* SVG has inverted Y axis. */
     const float2 screen_co = this->project_to_screen(transform, positions[i]);
-    txt.append(std::to_string(screen_co.x) + "," + std::to_string(screen_co.y));
+    txt.append(std::to_string(screen_co.x) + "," +
+               std::to_string(render_rect_.size().y - screen_co.y));
   }
 
   element_node.append_attribute("points").set_value(txt.c_str());
@@ -348,7 +348,9 @@ pugi::xml_node SVGExporter::write_path(pugi::xml_node node,
       txt.append("L");
     }
     const float2 screen_co = this->project_to_screen(transform, positions[i]);
-    txt.append(std::to_string(screen_co.x) + "," + std::to_string(screen_co.y));
+    /* SVG has inverted Y axis. */
+    txt.append(std::to_string(screen_co.x) + "," +
+               std::to_string(render_rect_.size().y - screen_co.y));
   }
   /* Close patch (cyclic). */
   if (cyclic) {
